Chore: adjust function that start in java 21
- getFirst to get(0)
- removeFirst to remove(0)